# pyade-numba

./: .gitignore  LICENSE  README.md  pyproject.toml  testing.py
gopt/: __init__.py  calculations.py  commons.py  config.py  de.py  ilshade.py  jade.py  jso.py  lshade.py  lshadecnepsin.py  mpede.py  sade.py  saepsdemmts.py  shade.py  shade_ext.py
gopt/test/: de_test.py
pyade/: __init__.py  commons.py  config.py  de.py  lshade.py  mpede.py
