[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyade-numba"
authors = [{name = "Charles Marks", email = "charlesmarksco@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.0"
dynamic = ["version", "description"]

dependencies = [
    'numba',
    #'numpy', #sb installed through numba
    'scipy',
]

[project.urls]
Home = "https://github.com/CircuitCM/pyade-numba"

[tool.flit.module]
name = "gopt" #So now we can import it next to pyade if desired.

[project.optional-dependencies]
intel = [
    'intel-cmplr-lib-rt',
]

[tool.flit.sdist]
#include = ["doc/"]
exclude = ["testing.py"]
